# autorelease

./: .gitignore  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
tests/: test_fake.py
