[tool.poetry]
name = "autorelease"
version = "0.1.0"
description = "autorelease workflow"

license = "LGPL v2.1"

authors = [
    "Mouadh Kaabachi <mouadh.kaabachi@gmail.com>"
]

readme = 'README.rst'

repository = "https://github.com"
homepage = "https://github.com"

keywords = ['devops', 'release']

[tool.poetry.dependencies]
python = "~3.6"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras



commitizen = "^1.5"
pip-tools = "^3.8"
tox = "^3.13"
pytest = "^5.0"
python-semantic-release = "^4.1"
[tool.poetry.dev-dependencies]



[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
files = [
    "pyproject.toml:version"
]
